{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 6,
  "lineage": "ae634159-8aa9-19f7-fd61-a499133fc309",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:752354625103:internet-gateway/igw-03f8bfd332bead81b",
            "id": "igw-03f8bfd332bead81b",
            "owner_id": "752354625103",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0f940af7e56cdad5a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:752354625103:subnet/subnet-0e1bc1ce17be40710",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1bc1ce17be40710",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752354625103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0f940af7e56cdad5a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:752354625103:subnet/subnet-04faa4d4d16c1d496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04faa4d4d16c1d496",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752354625103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0f940af7e56cdad5a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:752354625103:vpc/vpc-0f940af7e56cdad5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c813a6c719db3df8",
            "default_route_table_id": "rtb-05158860e2f2608a4",
            "default_security_group_id": "sg-0848c5e2bb276897b",
            "dhcp_options_id": "dopt-c54840a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f940af7e56cdad5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05158860e2f2608a4",
            "owner_id": "752354625103",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}